# lem

./: .envrc  .gitignore  .gitmodules  .travis.yml  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  ChangeLog.md  Dockerfile  Makefile  Makefile.am  README.md  STYLEGUIDE.md  TODO  abbrev.lisp  attribute.lisp  attributes.lisp  basic.lisp  bootstrap  bufed.lisp  buffer.lisp  buffers.lisp  build-linux.lisp  build.lisp  c-mode.lisp  command.lisp  commandloop.lisp  comp.lisp  configure.ac  contract.yml  defcommand.lisp  dired.lisp  display.lisp  errors.lisp  fatstring.lisp  file-command.lisp  file.lisp  flake.nix  ftree.lisp  ftree1.lisp  (+67 more)
.github/: FUNDING.yml  ISSUE_TEMPLATE.md
_sources/: generated.json  generated.nix
async-process/: .gitignore  LICENSE  Makefile.am  README.md  bootstrap  cleanup-all  commit  configure.ac
async-process/.github/workflows/: build.yml
async-process/src/: async-process.asd  async-process.c  async-process.h  async-process.lisp  async-process_windows.c
co-editing/: client.lisp  server.lisp  utils.lisp
contrib/: Makefile.am  lem-contrib.asd
contrib/bracket-paren-mode/: bracket-paren-mode.lisp  lem-bracket-paren-mode.asd
contrib/calc-mode/: lem-calc-mode.asd
contrib/fbar/: Readme.md  fbar.asd  fbar.lisp  lem-fbar.asd
contrib/google-translate/: lem-google-translate.asd  main.lisp
contrib/man/: lem-man.asd  main.lisp  project.lisp
contrib/migemo/: lem-migemo.asd  main.lisp
contrib/modeline-battery/: lem-modeline-battery.asd  main.lisp
contrib/mouse-sgr1006/: lem-mouse-sgr1006.asd  main.lisp
contrib/notmuch/: README.md  backend.lisp  lem-notmuch.asd  notmuch-hello.lisp  notmuch-message.lisp  notmuch-search.lisp  notmuch-show.lisp  notmuch.lisp  package.lisp
contrib/ollama/: README.html  README.md  lem-ollama.asd  listener.lisp  ollama.lisp
contrib/overwrite-mode/: lem-overwrite-mode.asd
contrib/select-popup/: lem-select-popup.asd  select-popup.lisp
contrib/selection-mode/: lem-selection-mode.asd  selection-mode.lisp
contrib/setlocale/: cffi.lisp  cffi_darwin.lisp  lem-setlocale.asd  project.lisp
contrib/setlocale/swig/: Lakefile  cffi.i
contrib/slime/: lem-slime.asd  slime.lisp  swank-protocol.lisp
contrib/smart-parens-mode/: smart-parens-mode.lisp
contrib/tetris/: lem-tetris.asd  tetris.lisp
contrib/trailing-spaces/: lem-trailing-spaces.asd  trailing-spaces.lisp
contrib/version-up/: lem-version-up.asd  version.lisp
contrib/weaver/: weaver.asd  weaver.lisp
docker/: Dockerfile-AppImage  Dockerfile-jsonrpc-websocket  Dockerfile-rpc  Dockerfile.mcp-dev  Dockerfile.mcp-test  Dockerfile.test  entrypoint.sh  make_appdir.sh
docs/: ARCHITECTURE.md  LIVING-CANVAS-DESIGN.md  LIVING-CANVAS-PHASE2-PLAN.md  default-keybindings.md  extension-development.md  index.md
document/: convert.ros  text-english.md  text.md  text.orig.md
extensions/: Makefile
game/: tetris.lisp
gen-desktop/: .gitignore  gen-desktop.ros
inquisitor/: .travis.yml  README.markdown  inquisitor.asd
lem-base/: basic.lisp  buffer-insert.lisp  buffer.lisp  buffers.lisp  documentation.lisp  edit.lisp  encodings.lisp  errors.lisp  file.lisp  fileutil.lisp  hooks.lisp  indent.lisp  lem-base.asd  line.lisp  macros.lisp  package.lisp  point.lisp  search.lisp  syntax-highlight-tm.lisp  syntax-highlight.lisp  syntax-parser.lisp  syntax.lisp  tmlanguage.lisp  util.lisp  var.lisp  wide.lisp
lem-c-mode/: c-mode.lisp  grammer.lisp  lem-c-mode.asd
lem-calc-mode/: lem-calc-mode.asd
lem-core/: abbrev.lisp  attribute.lisp  auto-save.lisp  button.lisp  clipboard.lisp  color-theme.lisp  color.lisp  command.lisp  comp.lisp  completion-mode.lisp  defcommand.lisp  directory-mode.lisp  dired.lisp  errors.lisp  event-queue.lisp  event.lisp  file-command.lisp  file-ext.lisp  fundamental-mode.lisp  go-back.lisp  go-mode.lisp  grep.lisp  gtags.lisp  help-command.lisp  history.lisp  init.lisp  input.lisp  interface.lisp  interp.lisp  isearch.lisp  kbdmacro.lisp  key.lisp  keyevent.lisp  keymap.lisp  kill.lisp  language-mode.lisp  lem-core.asd  lem.lisp  less-mode.lisp  line-numbers.lisp  (+29 more)
lem-css-mode/: css-mode.lisp
lem-encodings/: 8bit.lisp  euc-jp.lisp  lem-encodings.asd  utf-16.lisp  utf-8.lisp
lem-frontend-capi/: commands.lisp  editor-pane.lisp  input.lisp  lem-capi.asd  lem-lispworks.asd  lem-pane.lisp  lem-panel.lisp  main.lisp  menu.lisp  misc.lisp  package.lisp  popup-menu.lisp  popup-window.lisp  save-image.lisp  util.lisp  variables.lisp  window-pane.lisp
lem-frontend-electron/: frontend.js  index.html  index.js  keyevent.js  option.js  package.json
lem-frontend-ncurses/: lem-ncurses.asd  ncurses.lisp  term.lisp
lem-frontend-xcb/: Readme.md  global.lisp  lem-xcb.asd  test.lisp
lem-frontent-xcb/: Readme.md
lem-go-mode/: go-mode.lisp  lem-go-mode.asd
lem-html-mode/: html-mode.lisp
lem-js-mode/: js-mode.lisp  lem-js-mode.asd
lem-jsonrpc/: jsonrpc.lisp  lem-jsonrpc.asd  markdown.lisp  webview.lisp
lem-language-client/: jsonrpc.lisp  language-client.lisp  lem-language-client.asd  package.lisp  util.lisp
lem-lisp-mode/: button.lisp  errors.lisp  grammer.lisp  inspector.lisp  lem-lisp-mode.asd  lisp-definitions.lisp  lisp-mode.lisp  lisp-ui-mode.lisp  package.lisp  paren-coloring.lisp  repl.lisp  sldb.lisp  swank-extras.lisp  swank-protocol.lisp
lem-lisp-syntax/: enclosing.lisp  indent.lisp  lem-lisp-syntax.asd  lem-lisp-syntax.lisp  lisp-indent.lisp  misc.lisp  parse.lisp  syntax-table.lisp
lem-markdown-mode/: lem-markdown-mode.asd  markdown-mode.lisp
lem-ncurses/: lem-ncurses.asd  ncurses.lisp  term.lisp
lem-nim-mode/: lem-nim-mode.asd  nim-mode.lisp
lem-paredit-mode/: paredit-mode.lisp
lem-posix-shell-mode/: lem-posix-shell-mode.asd  posix-shell-mode.lisp
lem-python-mode/: lem-python-mode.asd  python-mode.lisp
lem-rust-mode/: rust-mode.lisp
lem-selection-mode/: lem-selection-mode.asd
lem-vi-mode/: binds.lisp  commands.lisp  core.lisp  ex-command.lisp  ex-core.lisp  ex-parser.lisp  ex-util.lisp  ex.lisp  jump-motions.lisp  lem-vi-mode.asd  mode.lisp  modeline.lisp  package.lisp  rc-example.lisp  state.lisp  vi-mode.lisp  (+2 more)
(+1694 files in other folders)
