lemdir = $(prefix)/share/lem/site-lisp
dist_lem_DATA = \
	Makefile \
	Makefile.am \
	Makefile.in \
	README.md \
	lem-contrib.asd

lem_bracketparenmodedir = $(lemdir)/bracket-paren-mode
dist_lem_bracketparenmode_DATA = \
	bracket-paren-mode/bracket-paren-mode.lisp \
	bracket-paren-mode/lem-bracket-paren-mode.asd

lem_fbardir = $(lemdir)/fbar
dist_lem_fbar_DATA = \
	fbar/Readme.md \
	fbar/fbar.lisp \
	fbar/lem-fbar.asd

lem_googletranslatedir = $(lemdir)/google-translate
dist_lem_googletranslate_DATA = \
	google-translate/README.md \
	google-translate/lem-google-translate.asd \
	google-translate/main.lisp \
	google-translate/project.lisp

lem_mandir = $(lemdir)/man
dist_lem_man_DATA = \
	man/lem-man.asd \
	man/main.lisp \
	man/project.lisp

lem_migemodir = $(lemdir)/migemo
dist_lem_migemo_DATA = \
	migemo/lem-migemo.asd \
	migemo/main.lisp \
	migemo/project.lisp

lem_modelinebatterydir = $(lemdir)/modeline-battery
dist_lem_modelinebattery_DATA = \
	modeline-battery/lem-modeline-battery.asd \
	modeline-battery/main.lisp

lem_mousesgr1006dir = $(lemdir)/mouse-sgr1006
dist_lem_mousesgr1006_DATA = \
	mouse-sgr1006/lem-mouse-sgr1006.asd \
	mouse-sgr1006/main.lisp \
	mouse-sgr1006/project.lisp

lem_selectpopupdir = $(lemdir)/select-popup
dist_lem_selectpopup_DATA = \
	select-popup/lem-select-popup.asd \
	select-popup/select-popup.lisp

lem_setlocaledir = $(lemdir)/setlocale
dist_lem_setlocale_DATA = \
	setlocale/cffi.lisp \
	setlocale/lem-setlocale.asd \
	setlocale/project.lisp

lem_setlocale_swigdir = $(lem_setlocaledir)/swig
dist_lem_setlocale_swig_DATA = \
	setlocale/swig/Lakefile \
	setlocale/swig/cffi.i

lem_tetrisdir = $(lemdir)/tetris
dist_lem_tetris_DATA = \
	tetris/lem-tetris.asd \
	tetris/tetris.lisp

lem_trailingspacesdir = $(lemdir)/trailing-spaces
dist_lem_trailingspaces_DATA = \
	trailing-spaces/lem-trailing-spaces.asd \
	trailing-spaces/trailing-spaces.lisp

lem_versionupdir = $(lemdir)/version-up
dist_lem_versionup_DATA = \
	version-up/lem-version-up.asd \
	version-up/project.lisp \
	version-up/version.lisp

lem_weaverdir = $(lemdir)/weaver
dist_lem_weaver_DATA = \
	weaver/weaver.asd \
	weaver/weaver.lisp

